--- a/wesee.html
+++ b/wesee.html
@@ -14,6 +14,7 @@
       <div id="ui">
       </div>
       <script type="text/javascript" src="static/underscore-min.js"></script>
+      <script type="text/javascript" src="static/tile.js"></script>
       <script type="text/javascript" src="static/wesee.js"></script>
     </body>
 </html>
